# ordina-pos

./: Cargo.toml  README.md  docker-compose.yml  example.env
migrations/: 000001_initial-schema.down.sql  000001_initial-schema.up.sql
src/: main.rs
src/schema/: context.rs  customer.rs  customer_order.rs  device_info.rs  dining_table.rs  dish.rs  dish_order.rs  mod.rs  mutation.rs  new_dining_table.rs  new_restaurant.rs  partner.rs  query.rs  restaurant.rs
