[package]
name = "ordina-pos"
version = "0.1.0"
authors = ["Rizki Romadhoni <rizki.romadhoni@kumparan.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"
pretty_env_logger = "0.3"
juniper = "0.11"
postgres = { version = "0.15", features = ["with-uuid", "with-chrono"]}
postgres-derive = "0.3"
r2d2_postgres = "0.14.0"
r2d2 = "0.8"
uuid = { version = "0.5", features = ["v4"] }
chrono = "0.4"
urlencoded = { version = ">= 0.5, < 0.7" }
iron = ">= 0.5, < 0.7"
juniper_iron = "0.3.0"
mount = "0.4.0" 
serde = { version = "1.0.2" }
logger = "0.4"
iron-json-response = "*"
serde_json = "1"
dotenv = "0.13"
jsonwebtoken = "5"
serde_derive = "1"
r2d2_redis = "0.8.0"
rand = "0.6.4"
rust-crypto = "0.2.36"
